@@ -42,12 +42,12 @@ function getRequestVar($str) {
             return null;
         }
         $ret = & $_REQUEST[$str];
+
+        if (get_magic_quotes_gpc()) {
+            $ret = stripslashes_deep($ret);
+        }
         //echo "\n<br>- Checking:". htmlspecialchars($str);
         $ret = sanitizeInput($ret);
-
-        if (get_magic_quotes_gpc() && !is_array($ret)) {
-            $ret = stripslashes($ret);
-        }
     }
     else {
         foreach ($str as $reqvar) {
